changed test cases